# fastapi-alembic-sqlmodel-poetry-starter

./: .env  Makefile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0909f24dfb8a_create_user_table.py  a0eaf598177c_auditing.py
src/: main.py
src/api/v1/: auth_route.py  user_route.py
src/core/: audit_context.py  constants.py  env_vars.py  events.py  security.py
src/dao/: db.py  schemas.py
src/db/: models.py  session.py
src/route/: auth_route.py  user_route.py
src/schemas/: user.py
src/service/: auth_service.py  user_service.py
src/services/: auth_service.py  user_service.py  user_transformer.py
src/util/: constants.py  env_vars.py  jwt_middleware.py  middle_ware.py
src/utils/: audit_middleware.py  exceptions.py  jwt_middleware.py  logging_middleware.py  middle_ware.py  sql_middleware.py
